@@ -14,11 +14,10 @@ public class FileReferenceDAO extends VersionableEntityDAO<FileReference> {
 
   public List<FileReference> findByDataObjectNeo4jId(long dataObjectId) {
     String query =
-      String.format(
-        "MATCH (d:DataObject)-[hr:has_reference]->%s WHERE ID(d)=%d ",
-        CypherQueryHelper.getObjectPart("r", "FileReference", false),
-        dataObjectId
-      ) +
+      "MATCH (d:DataObject)-[hr:has_reference]->%s WHERE ID(d)=%d ".formatted(
+          CypherQueryHelper.getObjectPart("r", "FileReference", false),
+          dataObjectId
+        ) +
       CypherQueryHelper.getReturnPart("r");
 
     var queryResult = findByQuery(query, Collections.emptyMap());
